<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.wholedetail.gramophone.ui.search.filter.SearchFilterViewModel" />

    </data>

    <com.xw.repo.widget.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/padding_default_large">

            <com.wholedetail.gramophone.view.LabeledDropdown
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default_large_half"
                app:label="@string/search_country"
                app:value="@={viewModel.country}" />

            <com.wholedetail.gramophone.view.LabeledDropdown
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default_large_half"
                app:label="@string/search_city" />

            <com.wholedetail.gramophone.view.LabeledDropdown
                android:id="@+id/metro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default_medium"
                app:label="@string/search_metro" />

            <View style="@style/Divider" />

            <TextView
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/search_gender" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default">

                <RadioButton
                    android:id="@+id/genderMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_gender_male" />

                <RadioButton
                    android:id="@+id/genderFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_gender_female" />

                <RadioButton
                    android:id="@+id/genderAny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/search_gender_any" />

            </RadioGroup>

            <View
                style="@style/Divider"
                android:layout_marginBottom="@dimen/margin_default_medium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.wholedetail.gramophone.view.LabeledDropdown
                    android:id="@+id/ageFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default_medium"
                    android:layout_weight="1"
                    app:label="@string/search_age" />

                <com.wholedetail.gramophone.view.LabeledDropdown
                    android:id="@+id/ageTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/margin_default_medium"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </com.xw.repo.widget.BounceScrollView>
</layout>