<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.wholedetail.gramophone.ui.auth.sign_up.maininfo.SignUpMainInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.auth.sign_up.maininfo.SignUpMainInfoFragment">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_xlarge"
            android:src="@drawable/ic_logo_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_medium"
            android:layout_marginTop="@dimen/margin_default_xlarge"
            android:layout_marginEnd="@dimen/margin_default_medium"
            android:text="@string/sign_up_info_enter"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_medium"
            android:layout_marginTop="@dimen/margin_default_large"
            android:layout_marginEnd="@dimen/margin_default_medium"
            android:digits="@string/only_letters"
            android:ems="10"
            android:hint="@string/sign_up_info_first_name"
            android:inputType="textAutoCorrect|textPersonName|textCapSentences"
            android:text="@={viewModel.userFirstName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_medium"
            android:layout_marginTop="@dimen/margin_default_large_half"
            android:layout_marginEnd="@dimen/margin_default_medium"
            android:digits="@string/only_letters"
            android:ems="10"
            android:hint="@string/sign_up_info_last_name"
            android:inputType="textAutoCorrect|textPersonName|textCapSentences"
            android:text="@={viewModel.userLastName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_default_large_half"
            android:layout_marginEnd="16dp"
            android:paddingStart="14px"
            android:paddingEnd="14px"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="0dp"
            app:boxStrokeColor="@color/pink"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign_up_info_password"
                android:inputType="textPassword"
                android:text="@={viewModel.userPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/finishSignUp"
            style="@style/PrimaryButton"
            android:layout_marginTop="@dimen/margin_default_xlarge"
            android:enabled="@{viewModel.isFormValid}"
            android:text="@string/sign_up_info_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default_large"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finishSignUp"
            app:layout_constraintVertical_bias="0.3"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>